Fixed arrow margin for method name collapse

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -30,5 +30,9 @@
 }
 
 details h2 {
-  margin-bottom: 1px;
+  margin-bottom: 0px;
+}
+
+summary::before {
+  top: .6em !important;
 }
